add make check to TODO

--- a/TODO
+++ b/TODO
@@ -24,3 +24,7 @@ Exclude bitmap:
 Snapshots:
 ----------
 - Set all snapshot related options on mke2fs -O snapshots
+
+Check:
+------
+- make check support
